(lang dune 3.11)

(name aoc2023)

(generate_opam_files true)

(source
 (github gloppasglop/ocaml_aoc2023))

(authors "Christophe Roux")

(maintainers "Christophe Roux")

(license LICENSE)

(documentation https://github.com/gloppasglop/ocaml_aoc2023)

(package
 (name aoc2023)
 (synopsis "AOC 2023")
 (description "AOC 2023")
 (depends ocaml dune)
 (tags
  (topics "aoc aoc2023" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
